--- a/config/blueprints/functional-component.ejs
+++ b/config/blueprints/functional-component.ejs
@@ -1,9 +1,9 @@
 import React, { PropTypes } from 'react';
 
-function <%= helpers.capitalize(name) %>(props, context) {
+const <%= helpers.capitalize(name) %> = (props, context) => {
   return (
   );
-}
+};
 
 <%= helpers.capitalize(name) %>.propTypes = {
 };
